Renamed plants to faces, reduced number of drag/drop images shown, added background to body, renamed js var to be more intuitive

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Welcome to my Virtual Terrarium</title>
+		<title>Welcome to Catstronauts</title>
 		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!-- import the webpage's stylesheet -->
 		<link rel="stylesheet" href="./style.css" />
@@ -13,63 +13,32 @@
 
 	<body>
 		<div id="page">
-			<h1>My Terrarium</h1>
-
+			<h1>Catstronauts</h1>
 			<div id="left-container" class="container">
-				<div class="plant-holder">
-					<img class="plant" alt="plant" id="plant1" src="./images/plant1.png" />
+				<div class="face-holder">
+					<img class="face" alt="face" id="face1" src="./images/face1.png" />
 				</div>
-				<div class="plant-holder">
-					<img class="plant" alt="plant" id="plant2" src="./images/plant2.png" />
+				<div class="face-holder">
+					<img class="face" alt="face" id="face2" src="./images/face2.png" />
 				</div>
-				<div class="plant-holder">
-					<img class="plant" alt="plant" id="plant3" src="./images/plant3.png" />
-				</div>
-				<div class="plant-holder">
-					<img class="plant" alt="plant" id="plant4" src="./images/plant4.png" />
-				</div>
-				<div class="plant-holder">
-					<img class="plant" alt="plant" id="plant5" src="./images/plant5.png" />
-				</div>
-				<div class="plant-holder">
-					<img class="plant" alt="plant" id="plant6" src="./images/plant6.png" />
-				</div>
-				<div class="plant-holder">
-					<img class="plant" alt="plant" id="plant7" src="./images/plant7.png" />
+				<div class="face-holder">
+					<img class="face" alt="face" id="face3" src="./images/face3.png" />
 				</div>
 			</div>
 			<div id="right-container" class="container">
-				<div class="plant-holder">
-					<img class="plant" alt="plant" id="plant8" src="./images/plant8.png" />
+				<div class="face-holder">
+					<img class="face" alt="face" id="face4" src="./images/face4.png" />
 				</div>
-				<div class="plant-holder">
-					<img class="plant" alt="plant" id="plant9" src="./images/plant9.png" />
+				<div class="face-holder">
+					<img class="face" alt="face" id="face5" src="./images/face5.png" />
 				</div>
-				<div class="plant-holder">
-					<img class="plant" alt="plant" id="plant10" src="./images/plant10.png" />
-				</div>
-				<div class="plant-holder">
-					<img class="plant" alt="plant" id="plant11" src="./images/plant11.png" />
-				</div>
-				<div class="plant-holder">
-					<img class="plant" alt="plant" id="plant12" src="./images/plant12.png" />
-				</div>
-				<div class="plant-holder">
-					<img class="plant" alt="plant" id="plant13" src="./images/plant13.png" />
-				</div>
-				<div class="plant-holder">
-					<img class="plant" alt="plant" id="plant14" src="./images/plant14.png" />
+				<div class="face-holder">
+					<img class="face" alt="face" id="face6" src="./images/face6.png" />
 				</div>
 			</div>
 
-			<div id="terrarium">
-				<div class="jar-top"></div>
-				<div class="jar-walls">
-					<div class="jar-glossy-long"></div>
-					<div class="jar-glossy-short"></div>
-				</div>
-				<div class="dirt"></div>
-				<div class="jar-bottom"></div>
+			<div class="cats-container">
+				<img class="cats" alt="cats" id="cats1" src="./images/cats.png" />
 			</div>
 		</div>
 	</body>
