Applying local changes

--- a/index.html
+++ b/index.html
@@ -16,24 +16,28 @@
 			<h1>Catstronauts</h1>
 			<div id="left-container" class="container">
 				<div class="face-holder">
-					<img class="face" alt="face" id="face1" src="./images/face1.png" />
 				</div>
 				<div class="face-holder">
-					<img class="face" alt="face" id="face2" src="./images/face2.png" />
+					<img class="face" alt="face" id="face1" src="./images/face1.jpg" />
 				</div>
 				<div class="face-holder">
-					<img class="face" alt="face" id="face3" src="./images/face3.png" />
+					<img class="face" alt="face" id="face2" src="./images/face2.jpg" />
+				</div>
+				<div class="face-holder">
+					<img class="face" alt="face" id="face3" src="./images/face3.jpg" />
 				</div>
 			</div>
 			<div id="right-container" class="container">
 				<div class="face-holder">
-					<img class="face" alt="face" id="face4" src="./images/face4.png" />
 				</div>
 				<div class="face-holder">
-					<img class="face" alt="face" id="face5" src="./images/face5.png" />
+					<img class="face" alt="face" id="face4" src="./images/face4.jpg" />
 				</div>
 				<div class="face-holder">
-					<img class="face" alt="face" id="face6" src="./images/face6.png" />
+					<img class="face" alt="face" id="face5" src="./images/face5.jpg" />
+				</div>
+				<div class="face-holder">
+					<img class="face" alt="face" id="face6" src="./images/face6.jpg" />
 				</div>
 			</div>
 
